fixed white spacing issue

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -1,8 +1,17 @@
 $main-color: #202020;
 $hover-color: #2980b9;
+$border-color: #3498db;
+
+@mixin fade {
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
 
 * {
 	font-family: 'Lato', arial;
+	box-sizing: border-box;
 	
 	a {
 		color: inherit;
@@ -39,7 +48,7 @@ body {
 .confirm_button:hover {
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
-	box-shadow: 0px 5px 0px #3498db;
+	box-shadow: 0px 5px 0px $border-color;
 }
 
 .field_name {
@@ -174,6 +183,7 @@ header {
 
 	.current-article-body {
 		margin-bottom: 5em;
+		white-space: pre-wrap;
 	}
 
 	.current-article-image {
@@ -227,6 +237,17 @@ header {
 	a {
 		color: inherit;
 		text-decoration: none;
+	}
+}
+
+.new-article a {
+	background-color: $hover-color;
+	padding: 0.8em;
+	color: white;
+	text-transform: lowercase;
+	@include fade;
+	&:hover {
+		box-shadow: 0px 5px 0px $border-color;
 	}
 }
 
